--- a/angular.json
+++ b/angular.json
@@ -46,7 +46,7 @@
 						"tsConfig": "tsconfig.app.json",
 						"inlineStyleLanguage": "scss",
 						"assets": ["src/favicon.ico", "src/assets"],
-						"styles": ["src/styles.scss"],
+						"styles": ["src/styles.scss", "node_modules/@costlydeveloper/ngx-awesome-popup/styles/theme.css"],
 						"scripts": [],
 						"stylePreprocessorOptions": {
 							"includePaths": ["src/assets/styles"]
