--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
 		"@angular/platform-browser": "^16.2.0",
 		"@angular/platform-browser-dynamic": "^16.2.0",
 		"@angular/router": "^16.2.0",
+		"@costlydeveloper/ngx-awesome-popup": "^3.2.0",
 		"jwt-decode": "^4.0.0",
+		"ngx-ui-loader": "^13.0.0",
+		"pdfmake": "^0.1.72",
+		"pdfmake-wrapper": "^2.1.3",
 		"rxjs": "~7.8.0",
 		"tslib": "^2.3.0",
 		"zone.js": "~0.13.0"
