--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@angular/platform-browser-dynamic": "^16.2.0",
 		"@angular/router": "^16.2.0",
 		"@costlydeveloper/ngx-awesome-popup": "^3.2.0",
+		"@swimlane/ngx-charts": "^20.4.1",
 		"jwt-decode": "^4.0.0",
 		"ngx-ui-loader": "^13.0.0",
 		"pdfmake": "^0.1.72",
@@ -35,6 +36,9 @@
 		"@angular-devkit/build-angular": "^16.2.1",
 		"@angular/cli": "~16.2.1",
 		"@angular/compiler-cli": "^16.2.0",
+		"@types/d3-scale": "^4.0.8",
+		"@types/d3-selection": "^3.0.10",
+		"@types/d3-shape": "^3.1.5",
 		"@types/jasmine": "~4.3.0",
 		"jasmine-core": "~4.6.0",
 		"karma": "~6.4.0",
