--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"@types/d3-selection": "^3.0.10",
 		"@types/d3-shape": "^3.1.5",
 		"@types/jasmine": "~4.3.0",
+		"@types/pdfmake": "^0.2.8",
 		"jasmine-core": "~4.6.0",
 		"karma": "~6.4.0",
 		"karma-chrome-launcher": "~3.2.0",
